fix: update style

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
 body {
-  color: blue;
-  /* background: url('./b.jpg'); */
+  color: #777;
+  text-align: center;
+}
+a {
+  color: #999;
+}
+a:visited {
+  color: #aaa;
 }
